--- a/index.html
+++ b/index.html
@@ -411,52 +411,50 @@
       { name: "Advice Shot", type: "modifier", categories: ["social"], text: `Ask any player of your choice what shot they would take here—and attempt that exact shot.` },
       { name: "Backwards Setup", type: "modifier", categories: ["movement"], text: `Stand facing away from the hole and twist your torso around to swing behind you.` },
       { name: "Bank It", type: "modifier", categories: ["mechanics"], text: `Your shot must bounce off something—a wall, rock, or rim—if possible.` },
-      { name: "Behind the Ball", type: "modifier", categories: ["movement"], text: `Stand directly behind your ball (as far back as the game allows) and swing from that awkward angle.` },
+      { name: "Behind the Ball", type: "modifier", categories: ["movement"], text: `Stand directly behind your ball (as far back as you can) and swing from that awkward angle.` },
       { name: "Behind-the-Back", type: "modifier", categories: ["movement","mechanics"], text: `Swing with your controller behind your back.` },
       { name: "Billiard Shot", type: "modifier", categories: ["mechanics","movement"], text: `Get low like a pool player and poke the ball like a cue stick.` },
-      { name: "Blue Shell", type: "modifier", categories: ["social"], text: `The player currently in last place chooses a modifier or direction that the players in the lead must follow for this shot.` },
+      { name: "Blue Shell", type: "modifier", categories: ["social"], text: `The player currently in last place chooses a modifier or direction that the player(s) in the lead must follow for this shot.` },
       { name: "Bowling Roll", type: "modifier", categories: ["movement","mechanics"], text: `Crouch and swing low as if rolling a bowling ball.` },
       { name: "Call Your Shot", type: "modifier", categories: ["voice"], text: `Before swinging, describe aloud exactly what you intend the ball to do.` },
-      { name: "Club Compass", type: "modifier", categories: ["social","mechanics"], text: `Rotate your club slowly until another player says “STOP!”—then swing without adjusting further.` },
+      { name: "Club Compass", type: "modifier", categories: ["social","mechanics"], text: `Rotate your club back slowly until another player says “STOP!”—then swing forward without adjusting further.` },
       { name: "Crowded Shot", type: "modifier", categories: ["social","movement"], text: `Other players may hover nearby and visually crowd your swing.` },
-      { name: "Echo Shot", type: "modifier", categories: ["mechanics","social"], text: `Attempt to recreate the shot taken by the player who went before you. If you are first, enjoy a normal shot.` },
+      { name: "Echo Shot", type: "modifier", categories: ["mechanics","social"], text: `Attempt to recreate the shot taken by the player who went before you. If you are up first, enjoy a normal shot.` },
       { name: "Elbows Glued", type: "modifier", categories: ["movement"], text: `Pretend your elbows are stuck to your sides as you swing.` },
       { name: "Eyes Closed", type: "modifier", categories: ["mechanics"], text: `Line up your shot normally, then close your eyes for the swing.` },
-      { name: "Eyes on the Hole", type: "modifier", categories: ["mechanics"], text: `Look toward the hole—not the ball—while swinging.` },
-      { name: "Fast Shot", type: "modifier", categories: ["mechanics"], text: `Don’t plan. Just approach the ball and swing immediately.` },
+      { name: "Eyes on the Hole", type: "modifier", categories: ["mechanics"], text: `Look toward the hole, not the ball, while swinging.` },
+      { name: "Fast Shot", type: "modifier", categories: ["mechanics"], text: `Don’t think, just putt! Approach the ball and swing immediately.` },
       { name: "Frozen Friends", type: "modifier", categories: ["social"], text: `All other players must freeze completely while you putt. If anyone moves, they must take their next shot opposite-handed.` },
       { name: "Full Golf Swing", type: "modifier", categories: ["movement"], text: `Perform an exaggerated, full-body golf swing. Channel your inner PGA legend.` },
-      { name: "Granny Shot", type: "modifier", categories: ["movement","mechanics"], text: `Swing with your controller between your legs.` },
-      { name: "Guided Shot", type: "modifier", categories: ["social","mechanics"], text: `Choose any player. They position themselves somewhere in the hole, and you must aim toward them.` },
-      { name: "Jetpack Shot", type: "modifier", categories: ["movement"], text: `Fly straight up and straight down once before swinging. No need to go high.` },
-      { name: "Left Edge Stance", type: "modifier", categories: ["movement"], text: `Stand as far left on the tee as the game allows.` },
+      { name: "Granny Shot", type: "modifier", categories: ["movement","mechanics"], text: `Face the ball and swing with your controller between your legs.` },
+      { name: "Guided Shot", type: "modifier", categories: ["social","mechanics"], text: `Choose a player. They position themselves somewhere around the hole, and you must aim toward them.` },
+      { name: "Left Edge Stance", type: "modifier", categories: ["movement"], text: `Stand as far left on the tee as possible.` },
       { name: "Look Away", type: "modifier", categories: ["movement"], text: `Turn your head away from the ball while swinging.` },
       { name: "Long Club", type: "modifier", categories: ["movement","mechanics"], text: `Raise or fly your avatar upward until your club becomes comically long—then swing.` },
       { name: "Lucky Normal", type: "modifier", categories: ["mechanics"], text: `You get a totally normal shot. Enjoy the break.` },
       { name: "Mix It Up", type: "modifier", categories: ["movement"], text: `If you’ve been standing, take this shot seated. If you’ve been seated, take this shot standing.` },
-      { name: "No Practice Swings", type: "modifier", categories: ["mechanics"], text: `Your first motion that touches the ball counts—no warm-ups.` },
+      { name: "No Practice Swings", type: "modifier", categories: ["mechanics"], text: `Make contact on your first swing—no practice!` },
       { name: "No Wrist!", type: "modifier", categories: ["mechanics","movement"], text: `Lock your wrist. Use only arm rotation and body movement to swing.` },
       { name: "One-Handed Swing", type: "modifier", categories: ["movement"], text: `Place one hand behind your back and swing with the other.` },
       { name: "Opposite Hand", type: "modifier", categories: ["mechanics","movement"], text: `Swing using your non-dominant hand only.` },
       { name: "Peanut Gallery", type: "modifier", categories: ["social","voice"], text: `All other players must loudly react the instant you hit the ball.` },
       { name: "Player Commentary", type: "modifier", categories: ["social","voice"], text: `Choose another player. They must narrate your entire setup and swing like a sports announcer.` },
-      { name: "Puppet Coach", type: "modifier", categories: ["puppet","voice","social"], text: `Raise your puppet and give yourself an over-the-top pep talk before swinging.` },
-      { name: "Puppet Commentators", type: "modifier", categories: ["puppet","voice","social"], text: `All shots on this hole must be narrated using puppet commentary only.` },
-      { name: "Puppet Crowd", type: "modifier", categories: ["puppet","social"], text: `Players may react to shots using puppets only. No voices.` },
+      { name: "Puppet Coach", type: "modifier", categories: ["puppet","voice","social"], text: `Using your hand puppet, give yourself a pep talk before swinging.` },
+      { name: "Puppet Commentators", type: "modifier", categories: ["puppet","voice","social"], text: `During this hole, players may react to and comment on shots using hand puppets only.` },
       { name: "Puppet Distractions", type: "modifier", categories: ["puppet","social"], text: `Other players may use their puppets to distract you while you swing.` },
       { name: "Quiet on Set!", type: "modifier", categories: ["voice","social"], text: `Complete silence until the ball stops rolling—then everyone reacts loudly at once.` },
       { name: "Reposition", type: "modifier", categories: ["movement"], text: `Line up your ideal shot, then take one full step left or right before swinging.` },
-      { name: "Right Edge Stance", type: "modifier", categories: ["movement"], text: `Stand as far right on the tee as the game allows.` },
-      { name: "Ringmaster Rumble", type: "modifier", categories: ["voice"], text: `Announce your shot in an enthusiastic circus-style voice.` },
+      { name: "Right Edge Stance", type: "modifier", categories: ["movement"], text: `Stand as far right on the tee as possible.` },
+      { name: "Ringmaster Rumble", type: "modifier", categories: ["voice"], text: `Dramatically introduce your shot in your best announcer voice.` },
       { name: "Robot Shot", type: "modifier", categories: ["movement","mechanics"], text: `Move only in straight lines and sharp angles while setting up and swinging.` },
-      { name: "Shot Dictator", type: "modifier", categories: ["social"], text: `The player who went before you dictates how you must line up or swing. If you’re first, the player with the highest score on the previous hole decides.` },
-      { name: "Silent Hole", type: "modifier", categories: ["voice","social"], text: `No one may speak for the entire hole. Mute if needed.` },
+      { name: "Shot Dictator", type: "modifier", categories: ["social"], text: `The player who went before you dictates how you must line up or swing. If you’re first, the player with the highest (worst) score on the previous hole decides for you.` },
+      { name: "Silent Hole", type: "modifier", categories: ["voice","social"], text: `No one may speak for the entire hole. Non-verbal communication is fine. Mute if needed!` },
       { name: "Skyline Shot", type: "modifier", categories: ["movement"], text: `Lift your club over your head and drop into the downswing from above.` },
-      { name: "Slow-Mo Swing", type: "modifier", categories: ["movement","mechanics"], text: `Swing entirely in dramatic slow motion.` },
-      { name: "Spin to Win", type: "modifier", categories: ["movement"], text: `Spin your avatar or your body once before taking your swing.` },
+      { name: "Slow-Mo Swing", type: "modifier", categories: ["movement","mechanics"], text: `Swing in dramatic slow motion. Add speed at the last moment as needed.` },
+      { name: "Spin to Win", type: "modifier", categories: ["movement"], text: `Spin your avatar or your body in a full circle once before taking your swing.` },
       { name: "Talkative Shot", type: "modifier", categories: ["voice"], text: `You must talk nonstop while setting up and swinging. If you stop talking for more than a second, you must swing immediately.` },
       { name: "Tiny Club", type: "modifier", categories: ["movement","mechanics"], text: `Lower your avatar (crouch, sit, or fly down) until your club becomes tiny—then swing.` },
-      { name: "Trick Shot", type: "modifier", categories: ["mechanics"], text: `Attempt a tricky, risky, or stylish shot—banks encouraged.` },
+      { name: "Trick Shot", type: "modifier", categories: ["mechanics"], text: `Attempt a tricky, risky, or stylish shot.` },
       { name: "Wack-A-Doodle", type: "modifier", categories: ["mechanics"], text: `Hit the ball as hard as seems reasonable for the hole.` },
       { name: "Whisper Shot", type: "modifier", categories: ["voice"], text: `Whisper dramatic commentary as you swing.` },
       { name: "Super Modifier — Chaos Reigns", type: "modifier", categories: ["super"], text: `For the next card only, the chaos modifier applies to every shot you take on that hole, not just the first.` },
