Enhance card game logic and animations
Added default title and text for card game. Improved deck shuffling logic to ensure better card distribution and avoid consecutive special cards. Updated animations for card shuffling and resetting.

--- a/index.html
+++ b/index.html
@@ -452,6 +452,9 @@
   <script>
     const SHEET_CSV_URL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vSM17xNjd3IrbpPKTcPbImDp6eG4ZUGgVXj7QsJmZon4NzIvywm-IJ4rwMZ1eW1jNW--NHvQGWOtPzg/pub?gid=0&single=true&output=csv";
 
+    const DEFAULT_TITLE = 'Tap the card or “Draw Card”';
+    const DEFAULT_TEXT = 'At the start of each hole, draw a card and apply the chaos to everyone’s first shot. Mini game and super modifier cards add special rules when they appear.';
+
     let fullCards = [];
     let deck = [];
     let discardPile = [];
@@ -528,56 +531,43 @@
         return;
       }
 
-      const specials = source.filter(isSpecialCard);
-      const normals = source.filter(card => !isSpecialCard(card));
+      // Start from a fully random shuffle.
+      shuffleArray(source);
 
-      // If there are no normals, spacing rules are impossible; just shuffle.
-      if (!normals.length || !specials.length) {
+      const hasSpecial = source.some(isSpecialCard);
+      const hasNormal = source.some(card => !isSpecialCard(card));
+
+      // If we don't have both types, just use the random shuffle as-is.
+      if (!hasSpecial || !hasNormal) {
         deck = [...source];
-        shuffleArray(deck);
         if (showMessage) updateStatus("Deck shuffled. Ready to draw.");
         else updateStatus();
         return;
       }
 
-      shuffleArray(specials);
-      shuffleArray(normals);
+      // 'order' is in draw order: index 0 will be the first drawn.
+      let order = [...source];
 
-      let ordered = [];
-
-      // First card must be a normal card
-      ordered.push(normals.pop());
-
-      // Case 1: specials <= normals → we can strictly alternate S,N,S,N...
-      if (specials.length <= normals.length) {
-        while (normals.length || specials.length) {
-          if (specials.length) {
-            ordered.push(specials.pop());
-          }
-          if (normals.length) {
-            ordered.push(normals.pop());
-          }
+      // Rule 1: First drawn card should not be special if a normal exists.
+      if (isSpecialCard(order[0])) {
+        const swapIndex = order.findIndex((c, idx) => idx > 0 && !isSpecialCard(c));
+        if (swapIndex !== -1) {
+          [order[0], order[swapIndex]] = [order[swapIndex], order[0]];
         }
-      } else {
-        // Case 2: more specials than normals → best-effort spacing, no warnings
-        let lastWasSpecial = false;
-        while (normals.length || specials.length) {
-          if (!lastWasSpecial && specials.length && (normals.length === 0 || Math.random() < 0.5)) {
-            ordered.push(specials.pop());
-            lastWasSpecial = true;
-          } else if (normals.length) {
-            ordered.push(normals.pop());
-            lastWasSpecial = false;
-          } else {
-            // Only specials left; may get consecutive specials, which is fine in extreme filters
-            ordered.push(specials.pop());
-            lastWasSpecial = true;
+      }
+
+      // Rule 2: Avoid consecutive specials when possible.
+      for (let i = 1; i < order.length; i++) {
+        if (isSpecialCard(order[i]) && isSpecialCard(order[i - 1])) {
+          const swapIndex = order.findIndex((c, idx) => idx > i && !isSpecialCard(c));
+          if (swapIndex !== -1) {
+            [order[i], order[swapIndex]] = [order[swapIndex], order[i]];
           }
         }
       }
 
-      // We draw from deck.pop(), so reverse so the "first" card is at the end
-      deck = ordered.reverse();
+      // We draw with deck.pop(), so reverse so that order[0] is the last element.
+      deck = order.slice().reverse();
 
       if (showMessage) updateStatus("Deck shuffled. Ready to draw.");
       else updateStatus();
@@ -651,22 +641,43 @@
       }
     }
 
-    function animateShuffle() {
-      if (!window.gsap) return;
-      gsap.fromTo(
-        cardEl,
-        { rotationZ: -3 },
-        {
-          rotationZ: 3,
-          duration: 0.08,
-          repeat: 5,
-          yoyo: true,
-          ease: "sine.inOut",
-          onComplete() {
-            gsap.to(cardEl, { rotationZ: 0, duration: 0.1 });
-          }
-        }
-      );
+    function resetCardFace() {
+      cardEl.classList.remove("mini-game", "super-modifier", "chaos-glow");
+      cardTypeLabel.textContent = "Shared Modifier";
+      cardTitleEl.textContent = DEFAULT_TITLE;
+      cardTextEl.textContent = DEFAULT_TEXT;
+    }
+
+    function animateShuffleAndReset() {
+      if (!window.gsap) {
+        resetCardFace();
+        return;
+      }
+
+      gsap.killTweensOf(cardEl);
+
+      const tl = gsap.timeline();
+      tl.to(cardEl, {
+        x: -20,
+        rotationZ: -3,
+        duration: 0.08,
+        ease: "sine.inOut"
+      })
+      .to(cardEl, {
+        x: 20,
+        rotationZ: 3,
+        duration: 0.08,
+        ease: "sine.inOut",
+        repeat: 3,
+        yoyo: true
+      })
+      .to(cardEl, {
+        x: 0,
+        rotationZ: 0,
+        duration: 0.12,
+        ease: "power1.out",
+        onComplete: resetCardFace
+      });
     }
 
     function applyCardStylesAndText(card) {
@@ -703,25 +714,20 @@
 
     function showCard(card) {
       if (window.gsap) {
-        gsap.to(cardEl, {
-          duration: 0.2,
-          rotationY: 90,
-          ease: "power1.in",
-          onComplete() {
-            applyCardStylesAndText(card);
-            gsap.fromTo(
-              cardEl,
-              { rotationY: -90, scale: 0.96, opacity: 0.9 },
-              {
-                rotationY: 0,
-                scale: 1,
-                opacity: 1,
-                duration: 0.32,
-                ease: "back.out(1.6)"
-              }
-            );
+        gsap.killTweensOf(cardEl);
+        // Drop-in animation: card falls from above onto the pile.
+        applyCardStylesAndText(card);
+        gsap.fromTo(
+          cardEl,
+          { y: -80, scale: 0.9, opacity: 0 },
+          {
+            y: 0,
+            scale: 1,
+            opacity: 1,
+            duration: 0.45,
+            ease: "bounce.out"
           }
-        });
+        );
       } else {
         cardEl.classList.remove("draw-anim");
         void cardEl.offsetWidth;
@@ -827,6 +833,7 @@
 
         fullCards = cards;
         buildDeck(false);
+        resetCardFace();
         updateStatus("Deck loaded. Ready to draw.");
       } catch (err) {
         console.error("Error loading sheet", err);
@@ -836,8 +843,8 @@
 
     drawButton.addEventListener("click", drawCard);
     shuffleButton.addEventListener("click", () => {
-      animateShuffle();
       buildDeck();
+      animateShuffleAndReset();
     });
     cardEl.addEventListener("click", drawCard);
 
